# ads_standalone

./: .gitignore  .gitmodules  README.md  THIRD_PARTY_NOTICES.md  appveyor.yml  meson.build  pyads_standalone.pth  pyproject.toml  setup.py
.github/workflows/: ci.yml  diag.yml  release.yml
native/src/: tcadsdll.cpp
scripts/: build_wheel.py  smoke_test_wheel.py  validate_windows.py
src/pyads_standalone/: __init__.py  _patch.py  bootstrap.py
tests/: test_bootstrap.py  test_init.py  test_patch.py  test_pth.py
