[build-system]
requires = [
  "setuptools>=69",
  "wheel>=0.43",
  "meson>=1.4",
  "ninja>=1.11",
]
build-backend = "setuptools.build_meta"

[project]
name = "pyads-standalone"
version = "0.1.0"
description = "Windows companion package for pyads with a bundled standalone TcAdsDll.dll"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
dependencies = ["pyads>=3.5,<3.6"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.setuptools]
include-package-data = true
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pyads_standalone = ["bin/*.dll"]
